[tool.poetry]
name = "encryption"
version = "0.1.0"
description = ""
authors = ["gitmanntoo <gitmanntoo@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^44.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
